--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "anlutro/curl": "dev-master"
+        "anlutro/curl": "0.1.*"
     },
     "require-dev": {
         "mockery/mockery": "dev-master"
